tests/duarouter/alternatives/style1_input/errors/xml/testsuite.duarouter
# The begin element is not given
missing_element_begin

# The end element is not given
missing_element_end


# The begin of an element is missing
no_begin

# The end of an element is missing
no_end


# An attribute occures twice
double_attribute

